[gd_scene load_steps=8 format=3 uid="uid://cglqrqtc6jw2h"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_76he8"]
[ext_resource type="PackedScene" uid="uid://bof8h8hkr8rdu" path="res://scenes/background.tscn" id="1_ds834"]
[ext_resource type="PackedScene" uid="uid://botacrx36dy0y" path="res://scenes/player.tscn" id="2_ctidy"]
[ext_resource type="PackedScene" uid="uid://bg6c2ugxhayo0" path="res://scenes/obstacle.tscn" id="3_kt1hg"]
[ext_resource type="AudioStream" uid="uid://bea1mv1vm6l75" path="res://assets/flappy-bird-assets-master/audio/point.ogg" id="6_b580l"]
[ext_resource type="PackedScene" uid="uid://b8v0l1h07a68i" path="res://scenes/hud.tscn" id="6_yydqo"]
[ext_resource type="AudioStream" uid="uid://cu4ya6c7goiw6" path="res://assets/flappy-bird-assets-master/audio/hit.ogg" id="7_frgbu"]

[node name="Main" type="Node2D"]
script = ExtResource("1_76he8")
obstacle_scene = ExtResource("3_kt1hg")

[node name="Background" parent="." instance=ExtResource("1_ds834")]

[node name="Player" parent="." instance=ExtResource("2_ctidy")]
position = Vector2(45, 256)

[node name="HUD" parent="." instance=ExtResource("6_yydqo")]

[node name="SpawnObstacleTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="ScoreSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_b580l")

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_frgbu")

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="new_game" from="Player" to="." method="_new_game"]
[connection signal="start_game" from="Player" to="." method="_start_game"]
[connection signal="timeout" from="SpawnObstacleTimer" to="." method="_on_spawn_obstacle_timer_timeout"]
